style.css
.character-info p {
    line-height: 75%;
    
}

.stats p {
    margin-left: 2.5%;
}

body {
    background-color: #5da516; /* It's shrek green and I will not be taking any criticism, thanks */
    margin-left: 1%;
}

h1 {
    font-family: "Amatic SC", serif;
    font-weight: bold;
    font-size: 300%;
}

.version-footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    font-size: 10pt;
    padding: 10px 0;
}

